fixed box spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,9 +7,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     .card-container{
         box-shadow: 2px 2px 10px #ff9710, 5px 0 10px #453838;
         border-radius: 15px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
 
+    --mat-sidenav-container-background-color: #352f2b;
     
     .mat-expansion-panel-body{
         max-height: 70vh;
